tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr22493_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr22493-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg2: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %10 = alloca s32i, "i", align 4
        store %arg2, %10
        scope {
            %17 = load %10 : s32i, align 4
            %18 = const 0 : s32i
            %19 = cmp gt %17, %18 : bool
            if %19 {
                %20 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %11 = load %10 : s32i, align 4
        %12 = minus %11 : s32i [nsw]
        store %12, %10, align 4
        scope {
            %14 = load %10 : s32i, align 4
            %15 = const 0 : s32i
            %16 = cmp lt %14, %15 : bool
            if %16 {
                return
            }
            yield
        }
        %13 = get_global @abort : (() -> void)*
        call @abort() [all]
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        store %arg0, %0
        store %arg1, %1
        %3 = const 0 : s32i
        store %3, %2
        %4 = const -2147483647 : s32i
        %5 = const 1 : s32i
        %6 = sub %4, %5 : s32i [nsw]
        call @f(%6) [all]
        %7 = get_global @exit : ((s32i) -> void)*
        %8 = const 0 : s32i
        call @exit(%8) [all]
        %9 = load %2 : s32i
        return %9
}
