tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr22630.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr22630.c" (c, x86_64-unknown-linux-gnu)
global j : s32i = 0 [external, default, align 4, dso_local]

fn bla(%arg0: s32i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*):
        %10 = alloca s32i*, "r", align 8
        %11 = alloca s32i*, "p", align 8
        %12 = alloca s32i*, "q", align 8
        store %arg0, %10
        %13 = load %10 : s32i*, align 8
        store %13, %12, align 8
        store %13, %11, align 8
        scope {
            %19 = load %11 : s32i*, align 8
            %20 = cast(ptr_to_bool) %19 : bool
            %21 = not %20 : bool
            if %21 {
                %22 = get_global @j : s32i*
                store %22, %11, align 8
                yield
            }
            yield
        }
        scope {
            %14 = load %11 : s32i*, align 8
            %15 = load %12 : s32i*, align 8
            %16 = cmp ne %14, %15 : bool
            if %16 {
                %17 = const 1 : s32i
                %18 = get_global @j : s32i*
                store %17, %18, align 4
                yield
            }
            yield
        }
        return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const #cir.ptr<null> : s32i*
    call @bla(%2) [all]
    scope {
        %5 = get_global @j : s32i*
        %6 = load %5 : s32i, align 4
        %7 = cast(int_to_bool) %6 : bool
        %8 = not %7 : bool
        if %8 {
            %9 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %3 = const 0 : s32i
    store %3, %0
    %4 = load %0 : s32i
    return %4
}
