tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr23135.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr23135.c" (c, x86_64-unknown-linux-gnu)
global i : vector<2 x s32i> = [150, 100] [external, default, align 8, dso_local]
global j : vector<2 x s32i> = [10, 13] [external, default, align 8, dso_local]
global res : rec_anon2E0 = zero [external, default, align 8, dso_local]
global k : vector<2 x s32i> = zero [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn verify(%arg0: s32i, %arg1: s32i, %arg2: s32i, %arg3: s32i, %arg4: rec_big_t*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i, %arg3: s32i, %arg4: rec_big_t*):
        %284 = load %arg4 : rec_big_t
        %285 = alloca s32i, "a1", align 4
        %286 = alloca s32i, "a2", align 4
        %287 = alloca s32i, "b1", align 4
        %288 = alloca s32i, "b2", align 4
        %289 = alloca rec_big_t, "big", align 1
        store %arg0, %285
        store %arg1, %286
        store %arg2, %287
        store %arg3, %288
        store %284, %289
        scope {
            %290 = load %285 : s32i, align 4
            %291 = load %287 : s32i, align 4
            %292 = cmp ne %290, %291 : bool
            %293 = ternary %292 ? { : bool
                %298 = const #true : bool
                yield %298
            } : {
                %295 = load %286 : s32i, align 4
                %296 = load %288 : s32i, align 4
                %297 = cmp ne %295, %296 : bool
                yield %297
            }
            if %293 {
                %294 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_big_t, "big", align 1
    %2 = alloca vector<2 x s32i>, "k0", align 8
    %3 = alloca vector<2 x s32i>, "k1", align 8
    %4 = alloca vector<2 x s32i>, "k2", align 8
    %5 = alloca vector<2 x s32i>, "k3", align 8
    %6 = alloca vector<2 x s32i>, "k4", align 8
    %7 = alloca vector<2 x s32i>, "k5", align 8
    %8 = alloca vector<2 x s32i>, "k6", align 8
    %9 = alloca vector<2 x s32i>, "k7", align 8
    %10 = const 0 : s32i
    store %10, %0
    %11 = get_global @i : vector<2 x s32i>*
    %12 = load %11 : vector<2 x s32i>, align 8
    %13 = get_global @j : vector<2 x s32i>*
    %14 = load %13 : vector<2 x s32i>, align 8
    %15 = add %12, %14 : vector<2 x s32i>
    store %15, %2, align 8
    %16 = load %2 : vector<2 x s32i>, align 8
    %17 = get_global @res : rec_anon2E0*
    %18 = get_member %17[0] "v" : vector<2 x s32i>*
    store %16, %18, align 8
    %19 = const 0 : s64i
    %20 = get_global @res : rec_anon2E0*
    %21 = get_member %20[1] "i" : s32i[2]*
    %22 = get_element %21[%19] : s32i*
    %23 = load %22 : s32i, align 8
    %24 = const 1 : s64i
    %25 = get_global @res : rec_anon2E0*
    %26 = get_member %25[1] "i" : s32i[2]*
    %27 = get_element %26[%24] : s32i*
    %28 = load %27 : s32i, align 4
    %29 = const 160 : s32i
    %30 = const 113 : s32i
    %31 = load %1 : rec_big_t, align 1
    %32 = alloca rec_big_t, "byval", align 8
    store %31, %32
    call @verify(%23, %28, %29, %30, %32) [all]
    %33 = get_global @i : vector<2 x s32i>*
    %34 = load %33 : vector<2 x s32i>, align 8
    %35 = get_global @j : vector<2 x s32i>*
    %36 = load %35 : vector<2 x s32i>, align 8
    %37 = mul %34, %36 : vector<2 x s32i>
    store %37, %3, align 8
    %38 = load %3 : vector<2 x s32i>, align 8
    %39 = get_global @res : rec_anon2E0*
    %40 = get_member %39[0] "v" : vector<2 x s32i>*
    store %38, %40, align 8
    %41 = const 0 : s64i
    %42 = get_global @res : rec_anon2E0*
    %43 = get_member %42[1] "i" : s32i[2]*
    %44 = get_element %43[%41] : s32i*
    %45 = load %44 : s32i, align 8
    %46 = const 1 : s64i
    %47 = get_global @res : rec_anon2E0*
    %48 = get_member %47[1] "i" : s32i[2]*
    %49 = get_element %48[%46] : s32i*
    %50 = load %49 : s32i, align 4
    %51 = const 1500 : s32i
    %52 = const 1300 : s32i
    %53 = load %1 : rec_big_t, align 1
    %54 = alloca rec_big_t, "byval", align 8
    store %53, %54
    call @verify(%45, %50, %51, %52, %54) [all]
    %55 = get_global @i : vector<2 x s32i>*
    %56 = load %55 : vector<2 x s32i>, align 8
    %57 = get_global @j : vector<2 x s32i>*
    %58 = load %57 : vector<2 x s32i>, align 8
    %59 = div %56, %58 : vector<2 x s32i>
    store %59, %4, align 8
    %60 = load %4 : vector<2 x s32i>, align 8
    %61 = get_global @res : rec_anon2E0*
    %62 = get_member %61[0] "v" : vector<2 x s32i>*
    store %60, %62, align 8
    %63 = const 0 : s64i
    %64 = get_global @res : rec_anon2E0*
    %65 = get_member %64[1] "i" : s32i[2]*
    %66 = get_element %65[%63] : s32i*
    %67 = load %66 : s32i, align 8
    %68 = const 1 : s64i
    %69 = get_global @res : rec_anon2E0*
    %70 = get_member %69[1] "i" : s32i[2]*
    %71 = get_element %70[%68] : s32i*
    %72 = load %71 : s32i, align 4
    %73 = const 15 : s32i
    %74 = const 7 : s32i
    %75 = load %1 : rec_big_t, align 1
    %76 = alloca rec_big_t, "byval", align 8
    store %75, %76
    call @verify(%67, %72, %73, %74, %76) [all]
    %77 = get_global @i : vector<2 x s32i>*
    %78 = load %77 : vector<2 x s32i>, align 8
    %79 = get_global @j : vector<2 x s32i>*
    %80 = load %79 : vector<2 x s32i>, align 8
    %81 = and %78, %80 : vector<2 x s32i>
    store %81, %5, align 8
    %82 = load %5 : vector<2 x s32i>, align 8
    %83 = get_global @res : rec_anon2E0*
    %84 = get_member %83[0] "v" : vector<2 x s32i>*
    store %82, %84, align 8
    %85 = const 0 : s64i
    %86 = get_global @res : rec_anon2E0*
    %87 = get_member %86[1] "i" : s32i[2]*
    %88 = get_element %87[%85] : s32i*
    %89 = load %88 : s32i, align 8
    %90 = const 1 : s64i
    %91 = get_global @res : rec_anon2E0*
    %92 = get_member %91[1] "i" : s32i[2]*
    %93 = get_element %92[%90] : s32i*
    %94 = load %93 : s32i, align 4
    %95 = const 2 : s32i
    %96 = const 4 : s32i
    %97 = load %1 : rec_big_t, align 1
    %98 = alloca rec_big_t, "byval", align 8
    store %97, %98
    call @verify(%89, %94, %95, %96, %98) [all]
    %99 = get_global @i : vector<2 x s32i>*
    %100 = load %99 : vector<2 x s32i>, align 8
    %101 = get_global @j : vector<2 x s32i>*
    %102 = load %101 : vector<2 x s32i>, align 8
    %103 = or %100, %102 : vector<2 x s32i>
    store %103, %6, align 8
    %104 = load %6 : vector<2 x s32i>, align 8
    %105 = get_global @res : rec_anon2E0*
    %106 = get_member %105[0] "v" : vector<2 x s32i>*
    store %104, %106, align 8
    %107 = const 0 : s64i
    %108 = get_global @res : rec_anon2E0*
    %109 = get_member %108[1] "i" : s32i[2]*
    %110 = get_element %109[%107] : s32i*
    %111 = load %110 : s32i, align 8
    %112 = const 1 : s64i
    %113 = get_global @res : rec_anon2E0*
    %114 = get_member %113[1] "i" : s32i[2]*
    %115 = get_element %114[%112] : s32i*
    %116 = load %115 : s32i, align 4
    %117 = const 158 : s32i
    %118 = const 109 : s32i
    %119 = load %1 : rec_big_t, align 1
    %120 = alloca rec_big_t, "byval", align 8
    store %119, %120
    call @verify(%111, %116, %117, %118, %120) [all]
    %121 = get_global @i : vector<2 x s32i>*
    %122 = load %121 : vector<2 x s32i>, align 8
    %123 = get_global @j : vector<2 x s32i>*
    %124 = load %123 : vector<2 x s32i>, align 8
    %125 = xor %122, %124 : vector<2 x s32i>
    store %125, %7, align 8
    %126 = load %7 : vector<2 x s32i>, align 8
    %127 = get_global @res : rec_anon2E0*
    %128 = get_member %127[0] "v" : vector<2 x s32i>*
    store %126, %128, align 8
    %129 = const 0 : s64i
    %130 = get_global @res : rec_anon2E0*
    %131 = get_member %130[1] "i" : s32i[2]*
    %132 = get_element %131[%129] : s32i*
    %133 = load %132 : s32i, align 8
    %134 = const 1 : s64i
    %135 = get_global @res : rec_anon2E0*
    %136 = get_member %135[1] "i" : s32i[2]*
    %137 = get_element %136[%134] : s32i*
    %138 = load %137 : s32i, align 4
    %139 = const 156 : s32i
    %140 = const 105 : s32i
    %141 = load %1 : rec_big_t, align 1
    %142 = alloca rec_big_t, "byval", align 8
    store %141, %142
    call @verify(%133, %138, %139, %140, %142) [all]
    %143 = get_global @i : vector<2 x s32i>*
    %144 = load %143 : vector<2 x s32i>, align 8
    %145 = minus %144 : vector<2 x s32i>
    store %145, %8, align 8
    %146 = load %8 : vector<2 x s32i>, align 8
    %147 = get_global @res : rec_anon2E0*
    %148 = get_member %147[0] "v" : vector<2 x s32i>*
    store %146, %148, align 8
    %149 = const 0 : s64i
    %150 = get_global @res : rec_anon2E0*
    %151 = get_member %150[1] "i" : s32i[2]*
    %152 = get_element %151[%149] : s32i*
    %153 = load %152 : s32i, align 8
    %154 = const 1 : s64i
    %155 = get_global @res : rec_anon2E0*
    %156 = get_member %155[1] "i" : s32i[2]*
    %157 = get_element %156[%154] : s32i*
    %158 = load %157 : s32i, align 4
    %159 = const -150 : s32i
    %160 = const -100 : s32i
    %161 = load %1 : rec_big_t, align 1
    %162 = alloca rec_big_t, "byval", align 8
    store %161, %162
    call @verify(%153, %158, %159, %160, %162) [all]
    %163 = get_global @i : vector<2 x s32i>*
    %164 = load %163 : vector<2 x s32i>, align 8
    %165 = not %164 : vector<2 x s32i>
    store %165, %9, align 8
    %166 = load %9 : vector<2 x s32i>, align 8
    %167 = get_global @res : rec_anon2E0*
    %168 = get_member %167[0] "v" : vector<2 x s32i>*
    store %166, %168, align 8
    %169 = const 0 : s64i
    %170 = get_global @res : rec_anon2E0*
    %171 = get_member %170[1] "i" : s32i[2]*
    %172 = get_element %171[%169] : s32i*
    %173 = load %172 : s32i, align 8
    %174 = const 1 : s64i
    %175 = get_global @res : rec_anon2E0*
    %176 = get_member %175[1] "i" : s32i[2]*
    %177 = get_element %176[%174] : s32i*
    %178 = load %177 : s32i, align 4
    %179 = const -151 : s32i
    %180 = const -101 : s32i
    %181 = load %1 : rec_big_t, align 1
    %182 = alloca rec_big_t, "byval", align 8
    store %181, %182
    call @verify(%173, %178, %179, %180, %182) [all]
    %183 = load %2 : vector<2 x s32i>, align 8
    %184 = load %3 : vector<2 x s32i>, align 8
    %185 = add %183, %184 : vector<2 x s32i>
    %186 = load %5 : vector<2 x s32i>, align 8
    %187 = add %185, %186 : vector<2 x s32i>
    %188 = load %6 : vector<2 x s32i>, align 8
    %189 = add %187, %188 : vector<2 x s32i>
    %190 = load %7 : vector<2 x s32i>, align 8
    %191 = add %189, %190 : vector<2 x s32i>
    %192 = load %8 : vector<2 x s32i>, align 8
    %193 = add %191, %192 : vector<2 x s32i>
    %194 = load %9 : vector<2 x s32i>, align 8
    %195 = add %193, %194 : vector<2 x s32i>
    %196 = get_global @k : vector<2 x s32i>*
    store %195, %196, align 8
    %197 = get_global @k : vector<2 x s32i>*
    %198 = load %197 : vector<2 x s32i>, align 8
    %199 = get_global @res : rec_anon2E0*
    %200 = get_member %199[0] "v" : vector<2 x s32i>*
    store %198, %200, align 8
    %201 = const 0 : s64i
    %202 = get_global @res : rec_anon2E0*
    %203 = get_member %202[1] "i" : s32i[2]*
    %204 = get_element %203[%201] : s32i*
    %205 = load %204 : s32i, align 8
    %206 = const 1 : s64i
    %207 = get_global @res : rec_anon2E0*
    %208 = get_member %207[1] "i" : s32i[2]*
    %209 = get_element %208[%206] : s32i*
    %210 = load %209 : s32i, align 4
    %211 = const 1675 : s32i
    %212 = const 1430 : s32i
    %213 = load %1 : rec_big_t, align 1
    %214 = alloca rec_big_t, "byval", align 8
    store %213, %214
    call @verify(%205, %210, %211, %212, %214) [all]
    %215 = load %2 : vector<2 x s32i>, align 8
    %216 = load %3 : vector<2 x s32i>, align 8
    %217 = mul %215, %216 : vector<2 x s32i>
    %218 = load %5 : vector<2 x s32i>, align 8
    %219 = mul %217, %218 : vector<2 x s32i>
    %220 = load %6 : vector<2 x s32i>, align 8
    %221 = mul %219, %220 : vector<2 x s32i>
    %222 = load %7 : vector<2 x s32i>, align 8
    %223 = mul %221, %222 : vector<2 x s32i>
    %224 = load %8 : vector<2 x s32i>, align 8
    %225 = mul %223, %224 : vector<2 x s32i>
    %226 = load %9 : vector<2 x s32i>, align 8
    %227 = mul %225, %226 : vector<2 x s32i>
    %228 = get_global @k : vector<2 x s32i>*
    store %227, %228, align 8
    %229 = get_global @k : vector<2 x s32i>*
    %230 = load %229 : vector<2 x s32i>, align 8
    %231 = get_global @res : rec_anon2E0*
    %232 = get_member %231[0] "v" : vector<2 x s32i>*
    store %230, %232, align 8
    %233 = const 0 : s64i
    %234 = get_global @res : rec_anon2E0*
    %235 = get_member %234[1] "i" : s32i[2]*
    %236 = get_element %235[%233] : s32i*
    %237 = load %236 : s32i, align 8
    %238 = const 1 : s64i
    %239 = get_global @res : rec_anon2E0*
    %240 = get_member %239[1] "i" : s32i[2]*
    %241 = get_element %240[%238] : s32i*
    %242 = load %241 : s32i, align 4
    %243 = const 1456467968 : s32i
    %244 = const -1579586240 : s32i
    %245 = load %1 : rec_big_t, align 1
    %246 = alloca rec_big_t, "byval", align 8
    store %245, %246
    call @verify(%237, %242, %243, %244, %246) [all]
    %247 = load %2 : vector<2 x s32i>, align 8
    %248 = load %3 : vector<2 x s32i>, align 8
    %249 = div %247, %248 : vector<2 x s32i>
    %250 = load %4 : vector<2 x s32i>, align 8
    %251 = div %249, %250 : vector<2 x s32i>
    %252 = load %5 : vector<2 x s32i>, align 8
    %253 = div %251, %252 : vector<2 x s32i>
    %254 = load %6 : vector<2 x s32i>, align 8
    %255 = div %253, %254 : vector<2 x s32i>
    %256 = load %7 : vector<2 x s32i>, align 8
    %257 = div %255, %256 : vector<2 x s32i>
    %258 = load %8 : vector<2 x s32i>, align 8
    %259 = div %257, %258 : vector<2 x s32i>
    %260 = load %9 : vector<2 x s32i>, align 8
    %261 = div %259, %260 : vector<2 x s32i>
    %262 = get_global @k : vector<2 x s32i>*
    store %261, %262, align 8
    %263 = get_global @k : vector<2 x s32i>*
    %264 = load %263 : vector<2 x s32i>, align 8
    %265 = get_global @res : rec_anon2E0*
    %266 = get_member %265[0] "v" : vector<2 x s32i>*
    store %264, %266, align 8
    %267 = const 0 : s64i
    %268 = get_global @res : rec_anon2E0*
    %269 = get_member %268[1] "i" : s32i[2]*
    %270 = get_element %269[%267] : s32i*
    %271 = load %270 : s32i, align 8
    %272 = const 1 : s64i
    %273 = get_global @res : rec_anon2E0*
    %274 = get_member %273[1] "i" : s32i[2]*
    %275 = get_element %274[%272] : s32i*
    %276 = load %275 : s32i, align 4
    %277 = const 0 : s32i
    %278 = const 0 : s32i
    %279 = load %1 : rec_big_t, align 1
    %280 = alloca rec_big_t, "byval", align 8
    store %279, %280
    call @verify(%271, %276, %277, %278, %280) [all]
    %281 = get_global @exit : ((s32i) -> void)*
    %282 = const 0 : s32i
    call @exit(%282) [all]
    %283 = load %0 : s32i
    return %283
}
