tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr23467.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr23467.c" (c, x86_64-unknown-linux-gnu)
global v : rec_anon2E0 = zero [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = get_global @v : rec_anon2E0*
        %6 = get_member %5[2] "m" : rec_s1*
        %7 = cast(ptr_to_int) %6 : s32i
        %8 = const 7 : s32i
        %9 = and %7, %8 : s32i
        %10 = cast(int_to_bool) %9 : bool
        if %10 {
            %11 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
