tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr23604.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr23604.c" (c, x86_64-unknown-linux-gnu)
fn g(%arg0: s32i, %arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %10 = alloca s32i, "i", align 4
        %11 = alloca s32i, "j", align 4
        %12 = alloca s32i, "__retval", align 4
        store %arg0, %10
        store %arg1, %11
        scope {
            %15 = load %10 : s32i, align 4
            %16 = const -1 : s32i
            %17 = cmp gt %15, %16 : bool
            if %17 {
                scope {
                    %18 = load %10 : s32i, align 4
                    %19 = const 2 : s32i
                    %20 = cmp lt %18, %19 : bool
                    if %20 {
                        scope {
                            %21 = load %10 : s32i, align 4
                            %22 = load %11 : s32i, align 4
                            %23 = cmp ne %21, %22 : bool
                            if %23 {
                                scope {
                                    %24 = load %11 : s32i, align 4
                                    %25 = const 0 : s32i
                                    %26 = cmp ne %24, %25 : bool
                                    if %26 {
                                        %27 = const 0 : s32i
                                        store %27, %12
                                        %28 = load %12 : s32i
                                        return %28
                                    }
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %13 = const 1 : s32i
        store %13, %12
        %14 = load %12 : s32i
        return %14
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %4 = const 1 : s32i
        %5 = const 0 : s32i
        %6 = call @g(%4, %5) : s32i [all]
        %7 = cast(int_to_bool) %6 : bool
        %8 = not %7 : bool
        if %8 {
            %9 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
