tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr24142.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr24142.c" (c, x86_64-unknown-linux-gnu)
fn f(%arg0: s32i, %arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %10 = alloca s32i, "a", align 4
        %11 = alloca s32i, "b", align 4
        %12 = alloca s32i, "__retval", align 4
        store %arg0, %10
        store %arg1, %11
        scope {
            %24 = load %10 : s32i, align 4
            %25 = const 1 : s32i
            %26 = cmp eq %24, %25 : bool
            if %26 {
                %27 = const 0 : s32i
                store %27, %10, align 4
                yield
            }
            yield
        }
        scope {
            %20 = load %11 : s32i, align 4
            %21 = const 0 : s32i
            %22 = cmp eq %20, %21 : bool
            if %22 {
                %23 = const 1 : s32i
                store %23, %10, align 4
                yield
            }
            yield
        }
        scope {
            %15 = load %10 : s32i, align 4
            %16 = const 0 : s32i
            %17 = cmp ne %15, %16 : bool
            if %17 {
                %18 = const 0 : s32i
                store %18, %12
                %19 = load %12 : s32i
                return %19
            }
            yield
        }
        %13 = const 1 : s32i
        store %13, %12
        %14 = load %12 : s32i
        return %14
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %4 = const 1 : s32i
        %5 = const 1 : s32i
        %6 = call @f(%4, %5) : s32i [all]
        %7 = const 1 : s32i
        %8 = cmp ne %6, %7 : bool
        if %8 {
            %9 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
